Fix: Select Catagory text not visible

--- a/app/src/Client/Static/Style/Style.scss
+++ b/app/src/Client/Static/Style/Style.scss
@@ -91,6 +91,10 @@ body{
         button{
             @extend .FancyButton
         }
+
+        select option {
+            background-color: #242424;
+        }
     }
 
     .By{
